New ReadQueryPlan interface